dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main.cc)
AM_INIT_AUTOMAKE(teepeedee, 0.1.2)

AM_CONFIG_HEADER(config.h)

dnl Checks for programs

AC_PROG_CXX
AC_PROG_RANLIB

dnl Check for libraries
dnl Checks for header files

AC_CHECK_HEADERS([sys/sendfile.h sys/uio.h crypt.h])

dnl Configure directory location
AC_ARG_ENABLE([configdir],
	AC_HELP_STRING([--enable-configdir=dir],[default directory for configuration]),
	tpd_configdir="$enableval",
	tpd_configdir="/etc/${PACKAGE}"
)

AC_DEFINE_UNQUOTED(TPD_CONFIGDIR,"`eval echo ${tpd_configdir}`",directory containing configuration files)

dnl All done

AC_OUTPUT(Makefile
	src/Makefile
	lib/Makefile
)