noinst_LIBRARIES = libteepeedee.a




libteepeedee_a_SOURCES = xfertable.cc \
	listener.cc \
	conftree.cc \
	iocontext.cc \
	iocontextwriter.cc \
	iocontextresponder.cc \
	sendfile.cc \
	path.cc \
	iocontextxfer.cc \
	uri.cc




noinst_HEADERS = xfertable.hh \
	iocontext.hh \
	dircontainer.hh \
	listener.hh \
	conftree.hh \
	iocontextwriter.hh \
	path.hh \
	unixexception.hh \
	confexception.hh \
	filelisterfile.hh \
	filelisternone.hh \
	filelister.hh \
	filelisterdir.hh \
	iocontextlist.hh \
	iocontextresponder.hh \
	iocontextxfer.hh \
	sendfile.hh \
	iocontextcontrolled.hh \
	iocontroller.hh \
	uri.hh \
	filelisterglob.hh
