noinst_LIBRARIES = libteepeedee.a




libteepeedee_a_SOURCES = streamtable.cc \
	conftree.cc \
	iocontextwriter.cc \
	iocontextresponder.cc \
	sendfile.cc \
	path.cc \
	uri.cc \
	dircontainer.cc \
	stream.cc \
	streamfd.cc





noinst_HEADERS = streamtable.hh \
	iocontext.hh \
	dircontainer.hh \
	conftree.hh \
	iocontextwriter.hh \
	path.hh \
	unixexception.hh \
	confexception.hh \
	filelisterfile.hh \
	filelisternone.hh \
	filelister.hh \
	filelisterdir.hh \
	iocontextlist.hh \
	iocontextresponder.hh \
	iocontextxfer.hh \
	sendfile.hh \
	iocontextcontrolled.hh \
	iocontroller.hh \
	uri.hh \
	filelisterglob.hh \
	xferlimit.hh \
	xferlimitexception.hh \
	limitexception.hh \
	streamfd.hh \
	stream.hh \
	streamopenssl.hh \
	opensslexception.hh \
	iocontextopenssl.hh

