noinst_LIBRARIES = libteepeedee.a




libteepeedee_a_SOURCES = streamtable.cc \
	conf.cc \
	confdb.cc \
	iocontextwriter.cc \
	iocontextresponder.cc \
	sendfile.cc \
	path.cc \
	uri.cc \
	dircontainer.cc \
	stream.cc \
	streamfd.cc \
	sslstreamfactory.cc





noinst_HEADERS = streamtable.hh \
	iocontext.hh \
	dircontainer.hh \
	conf.hh \
	confdb.hh \
	iocontextwriter.hh \
	path.hh \
	unixexception.hh \
	confexception.hh \
	filelisterfile.hh \
	filelisternone.hh \
	filelister.hh \
	filelisterdir.hh \
	iocontextlist.hh \
	iocontextresponder.hh \
	iocontextxfer.hh \
	sendfile.hh \
	iocontextcontrolled.hh \
	iocontroller.hh \
	uri.hh \
	filelisterglob.hh \
	xferlimit.hh \
	xferlimitexception.hh \
	limitexception.hh \
	streamfd.hh \
	stream.hh \
	streamopenssl.hh \
	opensslexception.hh \
	iocontextopenssl.hh \
	streamcontainer.hh \
	time.hh \
	sslstreamfactory.hh \
	iocontextlistener.hh \
	permitsignals.hh \
	signal.hh

